# ArmNeonOptimization

armAssembly/datas/disassemble_files/: assemblyEx1ArrWeightSum_arm64-v8a.txt  assemblyEx2Rgb2Gray_arm64-v8a.txt
armAssembly/scripts/: build_android.sh
helloworld/: CMakeLists.txt  hello_world.S  hello_world.c
helloworld/scripts/: build_android.sh
reluTest/: AsmGlobal.h  CMakeLists.txt  assemblyReluTest.cpp
reluTest/arm32/: relu.S
reluTest/arm64/: relu.S
reluTest/disassemble_files/: assemblyReluTest_arm64-v8a.txt  assemblyReluTest_armeabi-v7a.txt
reluTest/scripts/: build_android.sh
